# rust-ddd-skeleton

./: .env.example  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.yml
apps/config_api/: Cargo.toml  Dockerfile  Makefile
apps/config_api/src/: lib.rs  main.rs
apps/config_api/src/config_entry/: create_config_entry_request.rs  delete.rs  get.rs  mod.rs  post.rs  put.rs  update_config_entry_request.rs
apps/config_api/src/health/: get.rs
libs/config/: Cargo.toml
libs/config/src/: lib.rs
libs/config/src/config_entry/application/create_config_entry/: config_entry_creator.rs  create_config_entry_command.rs  create_config_entry_command_handler.rs  create_config_entry_response.rs  mod.rs
libs/config/src/config_entry/application/delete_config_entry/: config_entry_deleter.rs  delete_config_entry_command.rs  delete_config_entry_command_handler.rs  delete_config_entry_response.rs  mod.rs
libs/config/src/config_entry/application/find_config_entry/: config_entry_finder.rs  find_config_entry_query.rs  find_config_entry_query_handler.rs  find_config_entry_response.rs  mod.rs
libs/config/src/config_entry/application/update_config_entry/: config_entry_updater.rs  mod.rs  update_config_entry_command.rs  update_config_entry_command_handler.rs  update_config_entry_response.rs
libs/config/src/config_entry/domain/: mod.rs
libs/config/src/config_entry/domain/entities/: config_entry.rs
libs/config/src/config_entry/domain/errors/: config_entry_repository_error.rs  mod.rs
libs/config/src/config_entry/domain/events/: config_entry_created_event.rs  mod.rs  (+5 more)
(+79 files in other folders)
