[package]
name = "config"
version = "0.1.0"
edition = "2021"

[[test]]
name = "config"
path = "../../tests/libs/config/tests.rs"

[dev-dependencies]
rand = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
shared-domain-events = { path = "../shared/domain-events" }

[dependencies]
shared-cqrs = { path = "../shared/cqrs" }
shared-domain-events = { path = "../shared/domain-events" }
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
